Fix spacing issues for invest section

--- a/packages/website_v2/src/components/Invest/Invest.scss
+++ b/packages/website_v2/src/components/Invest/Invest.scss
@@ -69,6 +69,10 @@
   font-size: 20px;
   line-height: 30px;
 
+  @media screen and (max-width: 1024px) {
+    padding-right: 0;
+  }
+
   @media screen and (max-width: 767px) {
     align-items: center;
     font-size: 18px;
@@ -87,6 +91,10 @@
   width: auto;
   font-size: 20px;
   line-height: 30px;
+
+  @media screen and (max-width: 1024px) {
+    margin-bottom: 40px;
+  }
 
   .tw__arrow-right-icon {
     margin-left: 12px;
